---
title: Class Structure
---

classDiagram
    namespace Domain {
        class Actor {
            +UUID id
            +String username
            +String preferredUsername
            +String publicKey
            +String privateKey
            +createActivity(type, objectId)
        }

        class Note {
            +UUID id
            +UUID authorId
            +String content
            +DateTime published
            +toActivity(type, actorId)
        }

        class ActivityType {
            <<enumeration>>
            CREATE
            DELETE
            LIKE
            ANNOUNCE
        }

        class Relationship {
            +UUID id
            +UUID followerId
            +UUID followingId
            +DateTime createdAt
        }

        class Attachment {
            +UUID id
            +UUID noteId
            +String type
            +String url
            +String mimeType
        }
    }

    namespace UseCase {
        class ActorUseCase {
            +register(username, password)
            +login(username, password)
            +delete(actorId)
            +follow(followerId, targetId)
            +unfollow(followerId, targetId)
        }

        class NoteUseCase {
            +create(actorId, content, attachments)
            +delete(noteId, actorId)
        }
    }

    Actor "1" -- "*" Note : creates
    Note "1" -- "*" Attachment : has
    Actor "1" -- "*" Relationship : follows
    Actor "1" -- "*" Relationship : followed_by
